--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "homepage": "https://DeepanshuCoder.github.io/Merge-PdfX",
   "name": "project",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
